frame consultas added