@@ -11,6 +11,7 @@ import java.awt.Dimension;
 import java.awt.Font;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
+import java.util.Arrays;
 import java.util.List;
 import javax.swing.GroupLayout;
 import javax.swing.ImageIcon;
@@ -485,7 +486,6 @@ public class Pedido extends javax.swing.JFrame {
         jscrollProducts.setHorizontalScrollBarPolicy(javax.swing.ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
         jscrollProducts.setVerticalScrollBarPolicy(javax.swing.ScrollPaneConstants.VERTICAL_SCROLLBAR_ALWAYS);
         jscrollProducts.setPreferredSize(new java.awt.Dimension(866, 2640));
-        jscrollProducts.setRowHeaderView(null);
 
         jpanelProducts.setMinimumSize(new java.awt.Dimension(830, 637));
         jpanelProducts.setPreferredSize(new java.awt.Dimension(850, 637));
@@ -717,7 +717,7 @@ public class Pedido extends javax.swing.JFrame {
                 .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
             .addComponent(jPanel7, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
             .addComponent(jPanel16, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-            .addComponent(jScrollPaneAdded, javax.swing.GroupLayout.DEFAULT_SIZE, 308, Short.MAX_VALUE)
+            .addComponent(jScrollPaneAdded, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
         );
         jPanel5Layout.setVerticalGroup(
             jPanel5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
@@ -932,7 +932,7 @@ public class Pedido extends javax.swing.JFrame {
                 jpButtonLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                         .addComponent(textButton, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, 20, Short.MAX_VALUE)
         );
-        List<Object> btn = List.of(textButton, jpButton);
+        List<Object> btn = Arrays.asList(textButton, jpButton);
         return btn;
     }
 
@@ -975,32 +975,50 @@ public class Pedido extends javax.swing.JFrame {
         JLabel txtMas = new javax.swing.JLabel();
 
         jpAdded.setBackground(new java.awt.Color(255, 255, 255));
-        //invoca la función que se encarga de asignar el producto al lista del pedido
-        productNameAdded = productAddedName(productNameAdded, producto);
-        //invoca la función que se encarga de asignar el precio del producto
-        txtSubTotal = productAddedPrice(txtSubTotal, precio);
-        //invoca la función que ajusta la cantidad 
-        List<Object> cantidadElements = productAddedCantidad(jpCant, txtNumItems, txtRest, txtMas, cantidad);
-        jpCant = (JPanel) cantidadElements.get(0);
-        txtNumItems = (JLabel) cantidadElements.get(1);
-        txtRest = (JLabel) cantidadElements.get(2);
-        txtMas = (JLabel) cantidadElements.get(3);
 
-        //init elements
+        productNameAdded.setFont(new java.awt.Font("Tahoma", 0, 16)); // NOI18N
+        productNameAdded.setText("Producto");
+
+        txtSubTotal.setFont(new java.awt.Font("Tahoma", 0, 16)); // NOI18N
+        txtSubTotal.setText("$450");
+
+        jpCant.setBackground(new java.awt.Color(255, 255, 255));
+        jpCant.setBorder(new javax.swing.border.LineBorder(new java.awt.Color(204, 204, 204), 1, true));
+
+        txtNumItems.setFont(new java.awt.Font("Tahoma", 0, 16)); // NOI18N
+        txtNumItems.setText("5");
+
+        txtRest.setIcon(new javax.swing.ImageIcon(getClass().getResource("/icons/menos16.png"))); // NOI18N
+        txtRest.setText("-");
+
+        txtMas.setBackground(new java.awt.Color(255, 255, 255));
+        txtMas.setFont(new java.awt.Font("Tahoma", 1, 16)); // NOI18N
+        txtMas.setIcon(new javax.swing.ImageIcon(getClass().getResource("/icons/mas16.png"))); // NOI18N
+        txtMas.setText("+");
+
+        jpAdded.setBackground(new java.awt.Color(255, 255, 255));
+
+        productNameAdded.setFont(new java.awt.Font("Tahoma", 0, 16)); // NOI18N
+        productNameAdded.setText("Producto");
+
+        txtSubTotal.setFont(new java.awt.Font("Tahoma", 0, 16)); // NOI18N
+        txtSubTotal.setText("$450");
+
+        jpCant.setBackground(new java.awt.Color(255, 255, 255));
+        jpCant.setBorder(new javax.swing.border.LineBorder(new java.awt.Color(204, 204, 204), 1, true));
+
+        txtNumItems.setFont(new java.awt.Font("Tahoma", 0, 16)); // NOI18N
+        txtNumItems.setText("5");
+
+        txtRest.setIcon(new javax.swing.ImageIcon(getClass().getResource("/icons/menos16.png"))); // NOI18N
+        txtRest.setText("-");
+
+        txtMas.setBackground(new java.awt.Color(255, 255, 255));
+        txtMas.setFont(new java.awt.Font("Tahoma", 1, 16)); // NOI18N
+        txtMas.setIcon(new javax.swing.ImageIcon(getClass().getResource("/icons/mas16.png"))); // NOI18N
+        txtMas.setText("+");
+
         javax.swing.GroupLayout jpCantLayout = new javax.swing.GroupLayout(jpCant);
-        jpCantLayout = jpCantLayoutAdded(jpCant, jpCantLayout, txtRest, txtNumItems, txtMas);
-
-        javax.swing.GroupLayout jpAddedLayout = new javax.swing.GroupLayout(jpAdded);
-        jpAddedLayout = jpAddedLayout(jpAdded, jpCant, jpAddedLayout, productNameAdded, txtSubTotal);
-
-        jpAdded.setBounds(0, y, 270, 90);
-        jpAdded.setBorder(new javax.swing.border.LineBorder(new java.awt.Color(204, 204, 204), 1, true));
-        jpProductsAd.add(jpAdded);
-        setVisible(true);
-        this.addMethods(txtRest, txtMas);
-    }
-
-    private GroupLayout jpCantLayoutAdded(JPanel jpCant, GroupLayout jpCantLayout, JLabel txtRest, JLabel txtNumItems, JLabel txtMas) {
         jpCant.setLayout(jpCantLayout);
         jpCantLayout.setHorizontalGroup(
                 jpCantLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
@@ -1023,10 +1041,8 @@ public class Pedido extends javax.swing.JFrame {
                                         .addComponent(txtMas))
                                 .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
         );
-        return jpCantLayout;
-    }
 
-    private GroupLayout jpAddedLayout(JPanel jpAdded, JPanel jpCant, GroupLayout jpAddedLayout, JLabel productNameAdded, JLabel txtSubTotal) {
+        javax.swing.GroupLayout jpAddedLayout = new javax.swing.GroupLayout(jpAdded);
         jpAdded.setLayout(jpAddedLayout);
         jpAddedLayout.setHorizontalGroup(
                 jpAddedLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
@@ -1037,7 +1053,7 @@ public class Pedido extends javax.swing.JFrame {
                                         .addComponent(txtSubTotal))
                                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, 72, Short.MAX_VALUE)
                                 .addComponent(jpCant, javax.swing.GroupLayout.PREFERRED_SIZE, 93, javax.swing.GroupLayout.PREFERRED_SIZE)
-                                .addGap(261, 261, 261))
+                                .addGap(61, 61, 61))
         );
 
         jpAddedLayout.setVerticalGroup(
@@ -1054,7 +1070,12 @@ public class Pedido extends javax.swing.JFrame {
                                                 .addComponent(txtSubTotal)))
                                 .addContainerGap(26, Short.MAX_VALUE))
         );
-        return jpAddedLayout;
+
+        jpAdded.setBounds(0, y, 300, 90);
+        jpAdded.setBorder(new javax.swing.border.LineBorder(new java.awt.Color(204, 204, 204), 1, true));
+        jpProductsAd.add(jpAdded);
+        setVisible(true);
+        this.addMethods(txtRest, txtMas);
     }
 
     private JLabel productAddedName(JLabel productNameAdded, String producto) {
@@ -1063,22 +1084,6 @@ public class Pedido extends javax.swing.JFrame {
         return productNameAdded;
     }
 
-    private List<Object> productAddedCantidad(JPanel jpCant, JLabel txtNumItems, JLabel txtRest, JLabel txtMas, String cantidad) {
-        jpCant.setBackground(new java.awt.Color(255, 255, 255));
-        jpCant.setBorder(new javax.swing.border.LineBorder(new java.awt.Color(204, 204, 204), 1, true));
-
-        txtNumItems.setFont(new java.awt.Font("Tahoma", 0, 16)); // NOI18N
-        txtNumItems.setText(cantidad);
-
-        txtRest.setIcon(new javax.swing.ImageIcon(getClass().getResource("/icons/menos16.png"))); // NOI18N
-        txtRest.setText("-");
-
-        txtMas.setBackground(new java.awt.Color(255, 255, 255));
-        txtMas.setFont(new java.awt.Font("Tahoma", 1, 16)); // NOI18N
-        txtMas.setIcon(new javax.swing.ImageIcon(getClass().getResource("/icons/mas16.png"))); // NOI18N
-        txtMas.setText("+");
-        return List.of(jpCant, txtNumItems, txtRest, txtMas);
-    }
 
     private JLabel productAddedPrice(JLabel txtSubTotal, String precio) {
         txtSubTotal.setFont(new java.awt.Font("Tahoma", 0, 16)); // NOI18N
